aster/tests/fail/missing_type.as
# Expected: compile failure (explicit types only)

def main() returns i32
    var x = 1
    return x

